--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -3,58 +3,68 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-	android:orientation="vertical"
-    tools:context="com.example.game2048.MainActivity" >
+	android:orientation="vertical">
 
-    <LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:visibility="gone">
-        
-        <TextView 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="@string/score"/>
-        
-        <TextView 
-            android:id="@+id/tvScore1"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-    
-    
-    
-	    <com.example.game2048.GameView 
-	        android:layout_width="match_parent"
-	        android:layout_height="0dp"
-	        android:layout_weight="0.95"
-	        android:id="@+id/gameView">
-	        
-	    </com.example.game2048.GameView>
-	    
 	<LinearLayout 
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="0.05"
-        android:gravity="center_horizontal"
-        android:background="#2C3135"
-        android:orientation="horizontal">
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:orientation="horizontal">
+	    
 	    <TextView 
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:text="@string/score"/>
-        
-        <TextView 
-            android:id="@+id/tvScore"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:layout_width="wrap_content"
-            android:textColor="#ffffff"
-            android:layout_height="wrap_content"/>
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/score"
+	        android:textAppearance="?android:attr/textAppearanceLarge"/>
+	    
+	    <TextView 
+	        android:id="@+id/tvScore"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:textAppearance="?android:attr/textAppearanceLarge"/>
+	    
+	    <TextView 
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:text="@string/bestScore"
+	        android:textAppearance="?android:attr/textAppearanceLarge"/>
+	    
+	    <TextView 
+	        android:id="@+id/tvBestScore"
+	        android:layout_width="0dp"
+	        android:layout_height="wrap_content"
+	        android:layout_weight="1"
+	        android:textAppearance="?android:attr/textAppearanceLarge"/>
+	</LinearLayout>
+	
+	
+	<LinearLayout 
+	    android:layout_width="fill_parent"
+	    android:layout_height="0dp"
+	    android:layout_weight="1"
+	    android:orientation="vertical">
+		<FrameLayout
+	        android:id="@+id/gameContainer"
+	        android:layout_width="fill_parent"
+	        android:layout_height="0dp"
+	        android:layout_weight="1" >
+	
+	        <com.example.game2048.GameView
+	            android:id="@+id/gameView"
+	            android:layout_width="fill_parent"
+	            android:layout_height="fill_parent" >
+	        </com.example.game2048.GameView>
+	
+	        <com.example.game2048.AnimLayer
+	            android:id="@+id/animLayer"
+	            android:layout_width="fill_parent"
+	            android:layout_height="fill_parent" >
+	        </com.example.game2048.AnimLayer>
+	    </FrameLayout>
     </LinearLayout>
-    
-
+	<Button 
+	    android:id="@+id/btnNewGame"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:text="@string/restart"/>
 </LinearLayout>
